# aspia

./: BUILDING.md  ChangelogCore.txt  README.md  cppan.yml
source/: CMakeLists.txt  aspia_core.rc  version.h  version.rc
source/ASBase/: CMakeLists.txt
source/ASClient/: CMakeLists.txt
source/ASCommon/: CMakeLists.txt  common.h
source/ASServer/: CMakeLists.txt
source/ASVideoCodec/: CMakeLists.txt
source/base/: common.cc  common.h  errno_logging.cc  errno_logging.h  file_logger.cc  file_logger.h  geometry.h  keycode_converter.cc  keycode_converter.h  keycode_converter_data.inc  locale_loader.cc  locale_loader.h  log.cc  log.cpp  log.h  message_serialization.h  service.h  service_controller.cc  service_controller.h  service_impl.h  service_impl_win.cc  typed_buffer.h
source/base_client/: clipboard.cc  clipboard.h
source/client/: client.cc  client.h  client_session.h  client_session_desktop_manage.cc  client_session_desktop_manage.h  client_session_desktop_view.cc  client_session_desktop_view.h  client_session_file_transfer.cc  client_session_file_transfer.h  client_session_system_info.cc  client_session_system_info.h  client_user_authorizer.cc  client_user_authorizer.h  clipboard.cc  clipboard.h  computer_factory.cc  computer_factory.h  connect_data.cc  connect_data.h  file_depacketizer.cc  file_depacketizer.h  file_packetizer.cc  file_packetizer.h  file_platform_util.h  file_platform_util_win.cc  file_remove_queue_builder.cc  file_remove_queue_builder.h  file_remove_task.cc  file_remove_task.h  file_remover.cc  file_remover.h  file_request.cc  file_request.h  file_status.cc  file_status.h  file_transfer.cc  file_transfer.h  file_transfer_queue_builder.cc  file_transfer_queue_builder.h  file_transfer_task.cc  (+3 more)
source/codec/: compressor.h  compressor_zlib.cc  compressor_zlib.h  cursor_decoder.cc  cursor_decoder.h  cursor_encoder.cc  cursor_encoder.h  decompressor.h  decompressor_zlib.cc  decompressor_zlib.h  pixel_translator.cc  pixel_translator.h  scoped_vpx_codec.cc  scoped_vpx_codec.h  video_decoder.cc  video_decoder.h  video_decoder_vpx.cc  video_decoder_vpx.h  video_decoder_zlib.cc  video_decoder_zlib.h  video_encoder.h  video_encoder_vpx.cc  video_encoder_vpx.h  video_encoder_zlib.cc  video_encoder_zlib.h  video_util.cc  video_util.h
source/config/: host_config.manifest  host_config.rc  host_config_entry_point.cc  host_config_main.cc  host_config_main.h  main.cc
source/console/: about_dialog.cc  about_dialog.h  address_book_dialog.cc  (+62 more)
(+481 files in other folders)
